fix layout issue

--- a/index.css
+++ b/index.css
@@ -1,24 +1,43 @@
-body {
-    width: 100px;
-    height: 100px;
-    margin: 0px;
-    padding: 0px;
-
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
+body {
+  width: 100%;
+  height: 100%;
+}
 
 .grid-container {
-    display: grid;
-	grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 400px 100px 100px;
-    grid-gap: 0.25em;
-    justify-items: center;
- 
-} 
+  /* Sizing and positioning the grid itself */
+  width: 70%;
+  height: 80%;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 
+  /* setting up the grid */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 400px 100px 100px;
+  grid-gap: 0.25em;
+  /* justify-items: center; */
+}
 
-div.grid-item {
-    grid-column: 1 / 5;
-   
-    
+.grid-item {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.grid-item1 {
+  grid-column: 1 / 5;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
